# honeyeater

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  book.toml  clippy.toml  deny.toml  rustfmt.toml  wrangler.jsonc
.cloudflare/: build-docs.sh
.github/workflows/: ci.yml
assets/css/: custom.css
assets/js/: version.js
crates/honeyeater/: Cargo.toml  README.md
crates/honeyeater-core/: Cargo.toml  README.md
crates/honeyeater-core/src/: hann_window.rs  lib.rs  sample.rs  windows.rs
crates/honeyeater-core/tests/vectors/: hann_8.npy  hann_periodic_8.npy
crates/honeyeater-core/tests/vectors/windows/hamming/: hamming_16.npy  hamming_64.npy  hamming_8.npy  hamming_periodic_16.npy  hamming_periodic_64.npy  hamming_periodic_8.npy
crates/honeyeater-core/tests/vectors/windows/hann/: hann_16.npy  hann_64.npy  hann_periodic_16.npy
crates/honeyeater-cuda/: Cargo.toml  README.md
crates/honeyeater-cuda/src/: lib.rs
crates/honeyeater-test/: Cargo.toml  README.md
crates/honeyeater-test/src/: lib.rs  macros.rs  npy.rs  scipy.rs  stats.rs
crates/honeyeater/src/: lib.rs
docs/: README.md  SUMMARY.md  architecture-planning.md  downstream-context.md  glossary.md  policies.md  roadmap.md  start-here.md  testing.md  vision.md
tools/oracle-gen/: Cargo.toml  README.md
tools/oracle-gen/placeholder/: Cargo.toml
tools/oracle-gen/placeholder/src/: main.rs
tools/oracle-gen/windows/: gen_hann_windows.py  gen_windows.py  requirements.txt
tools/oracle-gen/windows/crates/honeyeater-core/tests/vectors/: hann_periodic_64.npy
