[workspace]
resolver = "3"
members = [
    "crates/honeyeater",
    "crates/honeyeater-core",
    "crates/honeyeater-cuda",
    "crates/honeyeater-test",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panop-git/honeyeater"
homepage = "https://honeyeater.dev"
authors = ["The honeyeater contributors"]
keywords = ["dsp", "sdr", "radio", "signal-processing", "fft"]
categories = ["science", "mathematics"]

[workspace.dependencies]
num-complex = "0.4.6"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 1
