[package]
name = "honeyeater-test"
description = "Cross-validation helpers and tolerance assertion macros for testing DSP code against named oracles, from the honeyeater project."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
honeyeater-core = { path = "../honeyeater-core", version = "0.0.0" }
num-complex = { workspace = true }

[lints]
workspace = true
